@@ -7,13 +7,13 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 import ru.mylearning.myspringprojecttest1.Config.PasswordEncoderConfiguration;
-import ru.mylearning.myspringprojecttest1.Dtos.RegistrationUserDto;
+import ru.mylearning.myspringprojecttest1.Dtos.UserRegistrationDto;
 import ru.mylearning.myspringprojecttest1.Entity.User;
+import ru.mylearning.myspringprojecttest1.Mappers.UserMapper;
 import ru.mylearning.myspringprojecttest1.Repository.UserRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,12 +23,18 @@ public class UserService implements UserDetailsService {
 
     private final UserRepository userRepository;
     private final UserRoleService userRoleService;
-    private  final PasswordEncoderConfiguration passwordEncoderConfiguration;
+    private final PasswordEncoderConfiguration passwordEncoderConfiguration;
+    private final UserProfileService userProfileService;
+
 
 
     public Optional<User> findByUserName(String userName){
         log.info("пользователь найден findByUserName");
         return userRepository.findByUserName(userName);
+    }
+    public Optional<User> findByEmail (String Email){
+        log.info("пользователь найден  findByEmail");
+        return userRepository.findByEmail(Email);
     }
 
     @Override
@@ -41,19 +47,19 @@ public class UserService implements UserDetailsService {
         ));
         return new org.springframework.security.core.userdetails.User(
                 user.getUserName(),
-                user.getHashPassword(),
+                user.getPassword(),
                 user.getUserRoles().stream()
                         .map(userRole -> new SimpleGrantedAuthority(userRole.getRoleName()))
                         .collect(Collectors.toList())
         );
     }
-    public User createNewUser(RegistrationUserDto registrationUserDto){
-        User user = new User();
-        user.setUserName(registrationUserDto.getUserName());
-        user.setEmail(registrationUserDto.getEmail());
-        user.setHashPassword(passwordEncoderConfiguration.passwordEncoder().encode(registrationUserDto.getPassword()));
-        user.setUserRoles(List.of(userRoleService.getUserRole()));
-        user.setEnabled(true);
+    public User createNewUser(UserRegistrationDto userRegistrationDto){
+        User user = UserMapper.INSTANCE.mapToUser(userRegistrationDto);
+
+        user.setPassword(passwordEncoderConfiguration.passwordEncoder().encode(userRegistrationDto.getPassword()));
+        user.setUserRoles(new ArrayList<>(List.of(userRoleService.getUserRole())));
+        //user.setUserRoles(new ArrayList<>(Collections.singletonList(userRoleService.getUserRole())));
+        userProfileService.createUserProfileFromNewUser(user);
         return userRepository.save(user);
     }
 }
